# refined-tfhe-lhe

./: Cargo.toml  README.md
benches/: bench_aes.rs  bench_aes_half_cbs.rs  bench_aes_others.rs  bench_bitwise_cbs.rs  bench_cbs.rs  bench_cmux.rs  bench_hp_lhe.rs  bench_lut.rs  bench_lut_eval.rs  bench_lwe_to_glwe.rs  bench_lwes_to_glwe.rs  bench_tree.rs  bench_wopbs.rs
error_analysis/: aes_half_cbs.sage  cbs_tfhe.sage  fft_based_bit_cbs.sage  finding_param.sage  hp_lhe.sage  param.sage
src/: aes_he.rs  aes_instances.rs  aes_ref.rs  automorphism.rs  automorphism128.rs  fast_automorphism.rs  fourier_glwe_keyswitch.rs  fourier_poly_mult.rs  ggsw_conv.rs  glev_ciphertext.rs  glwe_conv.rs  glwe_keyswitch.rs  glwe_ks.rs  keygen.rs  lib.rs  mod_switch.rs  pbs.rs  rescale.rs  utils.rs  wopbs_instance.rs  wwlp_cbs_instance.rs
tests/: aes_eval.rs  aes_eval_half_cbs.rs  aes_ref.rs  fourier_poly_mult.rs  fourier_poly_mult_128.rs  ggsw_conv.rs  ggsw_lut.rs  glwe_keyswitch.rs  lut.rs  lwe_ks_by_glwe_ds.rs  lwe_to_glwe.rs  lwe_to_glwe_const.rs  lwe_to_glwe_with_dim_switch.rs  lwes_to_glwe.rs  pbs.rs  pbs_to_glwe.rs  pksk.rs  rescale.rs  sample_aes_eval_err.rs  sample_cbs_err.rs  sample_fourier_poly_mult_err.rs  sample_ggsw_conv_err.rs  sample_lwe_to_glwe_err.rs  sample_lwes_to_glwe_err.rs  sample_mod_switch_err.rs  sample_pbs_err.rs  sample_split_fourier_err.rs  scheme_switching.rs  trace.rs  trace128.rs  trace128_and_rescale.rs  trace128_with_mod_switch.rs  trace_and_rescale.rs  trace_with_mod_switch.rs  trace_with_mod_switch_a.rs  trace_with_mod_switch_b.rs  wopbs.rs
