[package]
name = "hom-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.5.3", features = ["boolean", "shortint", "x86_64-unix"] }
rand = { version = "*" }
aligned-vec = { version = "0.5.0" }

[[test]]
name = "fourier_poly_mult"
harness = false

[[test]]
name = "fourier_poly_mult_128"
harness = false
