[package]
name = "hom-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.5.3", features = ["boolean", "shortint", "x86_64-unix"] }
rand = { version = "*" }
aligned-vec = { version = "0.5.0" }
dyn-stack = { version = "0.9" }
rayon = { version = "*", optional = true }

[[test]]
name = "fourier_poly_mult"
harness = false

[[test]]
name = "fourier_poly_mult128"
harness = false

[[test]]
name = "trace"
harness = false

[[test]]
name = "trace_and_rescale"
harness = false

[[test]]
name = "pksk"
harness = false

[[test]]
name = "pbs_to_glwe"
harness = false

[[test]]
name = "ggsw_conv"
harness = false

[features]
default = ["monothread"]
monothread = []
multithread = ["rayon"]
