[package]
name = "hom-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.5.3", features = ["boolean", "shortint", "x86_64-unix"] }
rand = { version = "*" }
aligned-vec = { version = "0.5.0" }
dyn-stack = { version = "0.9" }
aes = { version = "*" }
rayon = { version = "*", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[test]]
name = "fourier_poly_mult"
harness = false

[[test]]
name = "fourier_poly_mult128"
harness = false

[[test]]
name = "trace"
harness = false

[[test]]
name = "trace_with_mod_switch"
harness = false

[[test]]
name = "lwe_to_glwe_const"
harness = false

[[test]]
name = "pksk"
harness = false

[[test]]
name = "lwes_to_glwe"
harness = false

[[test]]
name = "pbs"
harness = false

[[test]]
name = "pbs_to_glwe"
harness = false

[[test]]
name = "ggsw_conv"
harness = false

[[test]]
name = "ggsw_lut"
harness = false

[[test]]
name = "aes_ref"
harness = false

[[test]]
name = "aes_eval"
harness = false

[[test]]
name = "glwe_keyswitch"
harness = false

[[bench]]
name = "bench_lwe_to_glwe"
harness = false

[[bench]]
name = "bench_lwes_to_glwe"
harness = false

[[bench]]
name = "bench_cbs"
harness = false

[features]
default = ["monothread"]
monothread = []
multithread = ["rayon"]
